SimplestCRUDExample-main/src/main/java/com/example/SimplestCRUDExample/Error/RequestInputMissing.java
package com.example.SimplestCRUDExample.Error;

public class RequestInputMissing  extends RuntimeException {

    public RequestInputMissing(String id) {
        super(id);
    }

}

